Added try-catch for file.delete in services, added async for services

--- a/RegistryOffice/RegistryOffice.Rest.csproj
+++ b/RegistryOffice/RegistryOffice.Rest.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\RegistryOffice.Infrastructure\RegistryOffice.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="PersonsPasportIMG\" />
+  </ItemGroup>
+
 </Project>
