Added cors, old image deleating after update

--- a/RegistryOffice/Properties/launchSettings.json
+++ b/RegistryOffice/Properties/launchSettings.json
@@ -8,7 +8,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5178"
+      "applicationUrl": "http://192.168.0.106:5000"
     },
     "https": {
       "commandName": "Project",
